 * Updating code to build against stock cc65
   (V2.19) rather than requiring my extended-headers.
   (Much of that work was rolled into cc65 upstream,
   or is now moot thanks to alternate solutions.)

 * Added option to disable VBI entirely, at build-time
   (`make GD_OPT_VBI=0 ...`)

 * Rewrote Super IRG mode VBI and title screen DLI in
   inline assembly, to address stability bugs.

 * WIP: Music FIXME.

 * Nicer title screen (WIP)

 * Ran source files through:
   "indent -nbfda -npcs -npsl -bli0"

RELEASE: 2015_10_02_alpha

October 2, 2015
 * Adding support for non-flickering mode

RELEASE: 2015_08_15_alpha_1

August 15, 2015
 * Added VERSION definition to Makefile
 * Added brief name/version/credits splash screen
 * Created 'release' & 'release-clean' targets, for
   building a release .zip (containing .xex and some .txt files)

August 12, 2015
 * Increased max-kills to 110 (# of possible blocks on
   the screen; not that you'd EVER get a full screen of
   the same block)
 * Font header file generation part of build process.
 * Using #defines for piece picking & matching.
 * Using #defines for keycodes.
 * Using #define'd bits for SDMCTL settings.
 * Fixed likely bug in original game's high score tracking
   (affecting scores over 10,000 points).
 * Using #define'd pointer to OS ROM font (during "UH OH" sequence)
 * Erase pieces right after throwing them, so they don't stay
   next to your character while the cascade effect takes place.
 * Added missing loop pausing routines ("honk" sound/flash,
   "game over" brick wall drop, Level 15 "UH OH" sequence).
 * Added a bunch of comments.
 * New name on title screen ("GEM DROP Dle"; good enough ;-) )

July 18, 2015
 * Requiring cc65_atari8bit_extended_headers as an
   installed set of .h files in incldue path
   (vs. hack of using a symlink to them)

July 17, 2015
 * Initial github import; ported mostly to C for cc65
   + Converted FNT files to a #include'able gemdrop-font.h.