@@ -51,7 +51,7 @@ SEGMENTS {
     ONCE:      load = MAIN,       type = ro,                optional = yes;
     CODE:      load = MAIN,       type = ro,  define = yes;
     RODATA:    load = MAIN,       type = ro;
-    GEMDROP_FONT: load = MAIN,    type = rw,  define = yes                  align=$0100;
+    GEMDROP_FONT: load = MAIN,    type = rw,  define = yes                  align=$0400;
     TITLE_FONT:   load = MAIN,    type = rw,  define = yes                  align=$0100;
     PMG:       load = MAIN,       type = rw,  define = yes                  align=$1000; # FIXME
     DATA:      load = MAIN,       type = rw;
